# Claude_Journal_Club_Agents

./: .env.example  .gitignore  AGENT_SKILL_DESIGN.md  AGENT_SKILL_DESIGN_UPDATE_v2.8.md  ARCHIVE_COMPRESSION_FEATURE_20251101.md  Allassonnière-Tang-2021_analysis.json  CHANGELOG.md  CLAUDE.md  Crockett-2025_analysis.json  DAILY_SUMMARY_20251104.md  DEPLOYMENT_SUCCESS.md  DEV_SUMMARY_20251031.md  DOMAIN_NAMING_IMPACT_ANALYSIS.md  Dcoreresearchclaude_lit_workflowsrcanalyzers__init__.py  FEEDBACK_ANALYSIS_20251105.md  FEEDBACK_ANALYSIS_STATUS_20251105.md  HUMAN_NOTES_USAGE_GUIDE.md  HYBRID_ARCHITECTURE_DESIGN.md  LICENSE  MINIMAX_M2_STATUS_20251031.md  MOC_WIKI_LINK_FIX_SUMMARY.md  OLLAMA_USAGE_EVALUATION.md  OPTION_C_EVALUATION_REPORT.md  PHASE23_FIXES_COMPLETED_20251112.md  PHASE2_2_BATCH_EXECUTION_PLAN.md  PHASE2_2_EXECUTION_PLAN.md  PHASE2_2_PRIORITY_ANALYSIS.md  PHASE2_DAY1_SUMMARY.md  PHASE3A_RETROSPECTIVE_ANALYSIS.md  PHASE_2_1_COMPLETION_REPORT.md  PHASE_2_1_FIX_AND_TEST_REPORT.md  PHASE_2_2_COMPLETION_REPORT.md  PHASE_2_3_EXECUTION_PLAN_20251104.md  PHASE_2_3_PROGRESS_REPORT.md  PHASE_2_5_5_COMPLETION_REPORT.md  PLANNING_SESSION_SUMMARY_20251104.md  PRIVACY_CONFIRMED.md  PUBLISH_CHECKLIST.md  QUALITY_REPORT.md  README.md  (+58 more)
.claude/: settings.local.json
archive/: AGENT_SKILL_DESIGN_ARCHIVE_INDEX.md  AGENT_SKILL_DESIGN_v1.2_backup_20251030.md  README.md  concept_analysis.7z
chroma_db/: chroma.sqlite3
config/: CLAUDE.md  custom_figure_describe.md  custom_figure_source.md  custom_slides.md  custom_table_json.md  custom_table_markdown.md  custom_zettel.md  settings.yaml  (+1 more)
(+2147 files in other folders)
