[project]
name = "claude-lit-workflow"
version = "0.8.0"
description = "知識生產器 - Claude Code 驅動的學術文獻處理系統"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Sau-Chin Chen" }
]
keywords = ["academic", "literature", "zettelkasten", "knowledge-base", "pdf"]

dependencies = [
    # PDF Processing
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",

    # Document Generation
    "python-pptx>=0.6.23",
    "python-docx>=1.1.0",
    "markdown>=3.5",

    # Configuration & Templates
    "pyyaml>=6.0",
    "jinja2>=3.1.0",

    # LLM Integration
    "requests>=2.31.0",
    "anthropic>=0.72.0",
    "google-generativeai>=0.3.0",
    "openai>=1.0.0",

    # CLI & UI
    "rich>=13.0.0",
    "typer>=0.9.0",

    # Data Processing
    "pydantic>=2.5.0",
    "bibtexparser>=1.4.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",

    # Vector Database & Embeddings
    "chromadb>=0.4.22",

    # Optional: Advanced PDF features
    "lxml>=5.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# 核心工具
analyze = "analyze_paper:main"
slides = "make_slides:main"
kb = "kb_manage:main"
embeddings = "generate_embeddings:main"

# Zettel 生成（待實作 cli/zettel.py 後啟用）
# zettel = "cli.zettel:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
